Bug 596776 - 'IndexedDB: Prevent quota prompt from hanging on shutdown'. r=sicking.